Added robustness to sso cookie timestamp handling.